src/objects/ADvendio__VisitReportTextTemplate__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If you tick this check box, the template will be active and available for use.</description>
        <inlineHelpText>If you tick this check box, the template will be active and available for use.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__BackgrounImage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to a background image from static resources or company server.</description>
        <inlineHelpText>Link to a background image from static resources or company server.</inlineHelpText>
        <label>BackgroundImage</label>
        <referenceTo>ADvendio__BackgrounImage__c</referenceTo>
        <relationshipLabel>VisitReportTextTemplate</relationshipLabel>
        <relationshipName>VisitReportTextTemplate</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__Force_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Force Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__PdfFont__c</fullName>
        <description>Choose font which will be used when displayed as pdf.</description>
        <inlineHelpText>Choose font which will be used when displayed as pdf.</inlineHelpText>
        <label>PdfFont</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Arial</fullName>
                    <default>true</default>
                    <label>Arial</label>
                </value>
                <value>
                    <fullName>Times New Roman</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__Text__c</fullName>
        <description>Enter a text which will be displayed as the body of the visit report template.</description>
        <inlineHelpText>Enter a text which will be displayed as the body of the visit report template.</inlineHelpText>
        <label>Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ADvendio__from__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Enter the sender of the visit report; the user can be selected from lookup wizard.</description>
        <inlineHelpText>Enter the sender of the visit report; the user can be selected from lookup wizard.</inlineHelpText>
        <label>from</label>
        <referenceTo>User</referenceTo>
        <relationshipName>VisitReportTextTemplate</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>VisitReportTextTemplate</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>VisitReportTextTemplate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VisitReportTextTemplate</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>